changes in studentDto and cardDto class