@@ -2,10 +2,7 @@ package org.clx.library.services;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.clx.library.exception.BookNotFoundException;
-import org.clx.library.exception.CardInvalidException;
-import org.clx.library.exception.CardNotFoundException;
-import org.clx.library.exception.MaxAllowedBooksException;
+import org.clx.library.exception.*;
 import org.clx.library.model.*;
 import org.clx.library.repositories.BookRepository;
 import org.clx.library.repositories.CardRepository;
@@ -36,13 +33,13 @@ public class TransactionService {
     int finePerDay;
 
 
-    public String issueBooks(int cardId,int bookId) throws BookNotFoundException, CardNotFoundException {
+    public String issueBooks(int cardId,int bookId) {
         log.info("Attempting to issue book with ID: {} to card ID: {}", bookId, cardId);
         // Use findById() and check if the book exists
         Optional<Book> optionalBook = bookRepository.findById(bookId);
         if (optionalBook.isEmpty()) {
             log.warn("Book with ID: {} not found!", bookId);
-            throw new BookNotFoundException("Book not found!!");
+            throw new ResourceNotFoundException("Book","id",bookId);
         }
 
         Book book = optionalBook.get(); // Now it's safe to use book
@@ -50,19 +47,19 @@ public class TransactionService {
         // Check if the book is available
         if (!book.getAvailable()) {  // Use getAvailable() instead of isAvailable()
             log.warn("Book with ID: {} is unavailable!", bookId);
-            throw new BookNotFoundException("Book is unavailable!");
+            throw new ResourceNotFoundException("Book","id",bookId);
         }
 
         // Check if the card exists and is valid
         Card card=cardRepository.findById(cardId)
                 .orElseThrow(()-> {
                     log.warn("Card with ID: {} not found!", cardId);
-                    return new CardNotFoundException("Card Not Found With id : "+cardId);
+                    return new ResourceNotFoundException("Card","id",cardId);
                 });
 
         if (card==null||card.getCardStatus()== CardStatus.DEACTIVATED){
             log.warn("Card with ID: {} is deactivated.", cardId);
-            throw new CardInvalidException("Card is invalid!!");
+            throw new ResourceNotFoundException("Card","id",cardId);
         }
 
         // Check if the card has reached its book limit
@@ -92,11 +89,14 @@ public class TransactionService {
         return transaction.getTransactionId();
     }
 
-    public String returnBooks(int cardId,int bookId)throws BookNotFoundException, CardNotFoundException{
+    public String returnBooks(int cardId,int bookId){
         log.info("Attempting to return book with ID: {} for card ID: {}", bookId, cardId);
 
+        cardRepository.findById(cardId).orElseThrow(()-> new ResourceNotFoundException("card","id",cardId));
+        bookRepository.findById(bookId).orElseThrow(()-> new ResourceNotFoundException("book","id",bookId));
+
         List<Transaction> transactions=transactionRepository.findByCard_Book(cardId,bookId,TransactionStatus.SUCCESSFUL,true);
-        Transaction lastIssueTransaction=transactions.get(transactions.size()-1);
+        Transaction lastIssueTransaction=transactions.getLast();
         //Last transaction that has been done
         Date issueDate=lastIssueTransaction.getTransactionDate();
         long issueTime=Math.abs(issueDate.getTime()-System.currentTimeMillis());
